<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <group android:menuCategory="container">
        <item android:id="@+id/menu1"
            android:title="@string/menu_1"
            android:icon = "@drawable/ic_baseline_link_24"
            app:showAsAction="always" />
        <item android:id="@+id/menu2"
            android:title="@string/menu_2" />
        <item android:id="@+id/menu3"
            android:title="@string/menu_3" />
        <item android:id="@+id/menu4"
            android:title="@string/menu_4" />
        <item android:id="@+id/menu5"
            android:title="@string/menu_5" />
        <item android:id="@+id/menu6"
            android:title="@string/menu_6" />
    </group>

</menu>