<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetelanActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/setelan" />

    <Button
        android:id="@+id/btn_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Akun" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:text="@string/chat" />

    <Button
        android:id="@+id/btn_notifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="16dp"
        android:text="@string/notifikasi" />

    <Button
        android:id="@+id/btn_penyimpanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="16dp"
        android:text="@string/penyimpanan" />

    <Button
        android:id="@+id/btn_bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bahasa" />

    <Button
        android:id="@+id/btn_bantuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bantuan" />

    <Button
        android:id="@+id/btn_undang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="16dp"
        android:text="@string/undang" />

</RelativeLayout>